[gd_scene load_steps=25 format=3 uid="uid://ceuf5oyrnd40x"]

[ext_resource type="Texture2D" uid="uid://cxqncspu12dop" path="res://assets/hermes_interface/2_ControlConfig.png" id="1_1kixd"]
[ext_resource type="Script" path="res://scenes/ui/controls_options.gd" id="1_yvr4p"]
[ext_resource type="Resource" uid="uid://bay2gjgvc7fk1" path="res://resources/game_sounds.tres" id="2_ylpkn"]
[ext_resource type="PackedScene" uid="uid://b4r8q2yqn6m8x" path="res://scenes/ui/control_line.tscn" id="3_kl4m2"]
[ext_resource type="PackedScene" uid="uid://d2q8y2yqn6m8x" path="res://scenes/ui/conflict_warning.tscn" id="5_warn"]
[ext_resource type="Texture2D" uid="uid://dxsvhlifc6pm4" path="res://assets/hermes_interface/2_CCB_000001.png" id="5_ya3ru"]
[ext_resource type="Texture2D" uid="uid://cpkcdxftiwlq" path="res://assets/hermes_interface/2_CCB_010001.png" id="6_gxtvo"]
[ext_resource type="PackedScene" uid="uid://bq8y2yqn6m8x" path="res://scenes/ui/controls_help.tscn" id="6_help"]
[ext_resource type="Script" path="res://scenes/ui/control_line.gd" id="7_hngpg"]
[ext_resource type="Texture2D" uid="uid://b55p0osbq7c43" path="res://assets/hermes_interface/2_CCB_020001.png" id="7_q1wgm"]
[ext_resource type="Texture2D" uid="uid://d0dotuobf8x0v" path="res://assets/hermes_interface/2_CCB_030001.png" id="8_7ah6j"]
[ext_resource type="Texture2D" uid="uid://dlncp7f262eu1" path="res://assets/hermes_interface/2_CCB_180001.png" id="9_wc13r"]
[ext_resource type="Texture2D" uid="uid://v5i3ut8pyar4" path="res://assets/hermes_interface/2_CCB_190001.png" id="10_5kp8f"]
[ext_resource type="Texture2D" uid="uid://dvnfctnhbn5c4" path="res://assets/hermes_interface/2_CCB_130001.png" id="10_mqplt"]
[ext_resource type="Texture2D" uid="uid://bjsx7vd40ukwv" path="res://assets/hermes_interface/2_CCB_200001.png" id="11_3emjx"]
[ext_resource type="Texture2D" uid="uid://rsavves2vryq" path="res://assets/hermes_interface/2_CCB_100001.png" id="11_6qcqy"]
[ext_resource type="Texture2D" uid="uid://bniicalhxmhfm" path="res://assets/hermes_interface/2_CCB_110001.png" id="12_fagi0"]
[ext_resource type="Texture2D" uid="uid://cq60connxn7kf" path="res://assets/hermes_interface/2_CCB_140001.png" id="12_ww1u3"]
[ext_resource type="Texture2D" uid="uid://b4hrkql5u37rs" path="res://assets/hermes_interface/2_CBB_050001.png" id="13_44085"]
[ext_resource type="Texture2D" uid="uid://cku0wsh1n16p6" path="res://assets/hermes_interface/2_CCB_160001.png" id="14_pli8f"]
[ext_resource type="Texture2D" uid="uid://dnnkmdy2ajr6c" path="res://assets/hermes_interface/2_CCB_120001.png" id="14_yuuwf"]
[ext_resource type="Texture2D" uid="uid://cy2id6m2b2ch5" path="res://assets/hermes_interface/2_CCB_090001.png" id="18_6e1hn"]

[sub_resource type="ButtonGroup" id="ButtonGroup_l50b1"]

[sub_resource type="LabelSettings" id="LabelSettings_2sjrn"]
font_size = 12
font_color = Color(0.842043, 0.853592, 0.865194, 1)

[node name="ControlsOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvr4p")
sounds = ExtResource("2_ylpkn")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1kixd")

[node name="TabButtons" type="Control" parent="."]
anchors_preset = 0
offset_left = 23.0
offset_top = 557.0
offset_right = 448.0
offset_bottom = 602.0

[node name="Targeting" type="TextureButton" parent="TabButtons"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
offset_left = 28.0
offset_right = 98.0
offset_bottom = 45.0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_l50b1")
texture_pressed = ExtResource("5_ya3ru")
texture_hover = ExtResource("5_ya3ru")

[node name="TargetingLabel" type="Label" parent="TabButtons/Targeting"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_top = 49.0
offset_right = 16.0
offset_bottom = 66.0
grow_horizontal = 2
text = "Targeting"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="Ship" type="TextureButton" parent="TabButtons"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
offset_left = 139.0
offset_right = 209.0
offset_bottom = 45.0
toggle_mode = true
button_group = SubResource("ButtonGroup_l50b1")
texture_pressed = ExtResource("6_gxtvo")
texture_hover = ExtResource("6_gxtvo")

[node name="ShipLabel" type="Label" parent="TabButtons/Ship"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_top = 49.0
offset_right = 13.0
offset_bottom = 66.0
grow_horizontal = 2
text = "Ship"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="Weapons" type="TextureButton" parent="TabButtons"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
offset_left = 253.0
offset_top = 6.0
offset_right = 323.0
offset_bottom = 51.0
toggle_mode = true
button_group = SubResource("ButtonGroup_l50b1")
texture_pressed = ExtResource("7_q1wgm")
texture_hover = ExtResource("7_q1wgm")

[node name="WeaponLabel" type="Label" parent="TabButtons/Weapons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 44.0
offset_right = 21.0
offset_bottom = 61.0
grow_horizontal = 2
text = "Weapons"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="Misc" type="TextureButton" parent="TabButtons"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
offset_left = 359.0
offset_top = -2.0
offset_right = 429.0
offset_bottom = 45.0
toggle_mode = true
button_group = SubResource("ButtonGroup_l50b1")
texture_pressed = ExtResource("8_7ah6j")
texture_hover = ExtResource("8_7ah6j")

[node name="MiscLabel" type="Label" parent="TabButtons/Misc"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 51.0
offset_right = 15.0
offset_bottom = 68.0
grow_horizontal = 2
text = "Misc"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="TabPanels" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 111.0
offset_right = -47.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="HBoxContainer" parent="TabPanels"]
layout_mode = 2

[node name="Control" type="Control" parent="TabPanels/TitleBar"]
custom_minimum_size = Vector2(310, 0)
layout_mode = 2

[node name="KeyTitle" type="Label" parent="TabPanels/TitleBar"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
text = "Key"
horizontal_alignment = 1

[node name="JoyTitle" type="Label" parent="TabPanels/TitleBar"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Joystick"
horizontal_alignment = 1

[node name="MouseTitle" type="Label" parent="TabPanels/TitleBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Mouse"
horizontal_alignment = 1

[node name="TargetControls" type="VBoxContainer" parent="TabPanels"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabPanels/TargetControls"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabPanels/TargetControls/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ControlLine2" parent="TabPanels/TargetControls/ScrollContainer/VBoxContainer" instance=ExtResource("3_kl4m2")]
layout_mode = 2
script = ExtResource("7_hngpg")
label_text = "Test"
key = 4194313
joy_button = 0

[node name="ShipControls" type="Control" parent="TabPanels"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabPanels/ShipControls"]
layout_mode = 0
offset_left = 32.0
offset_top = 94.0
offset_right = 936.0
offset_bottom = 518.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabPanels/ShipControls/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WeaponControls" type="Control" parent="TabPanels"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabPanels/WeaponControls"]
layout_mode = 0
offset_left = 32.0
offset_top = 94.0
offset_right = 936.0
offset_bottom = 518.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabPanels/WeaponControls/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ComputerControls" type="Control" parent="TabPanels"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabPanels/ComputerControls"]
layout_mode = 0
offset_left = 32.0
offset_top = 94.0
offset_right = 936.0
offset_bottom = 518.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabPanels/ComputerControls/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActionButtons" type="Control" parent="."]
anchors_preset = 0
offset_left = 625.0
offset_top = 1.0
offset_right = 1022.0
offset_bottom = 68.0

[node name="CancelButton" type="TextureButton" parent="ActionButtons"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
offset_left = 21.0
offset_top = 1.0
offset_right = 87.0
offset_bottom = 63.0
texture_hover = ExtResource("11_6qcqy")

[node name="CancelLabel" type="Label" parent="ActionButtons/CancelButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 67.0
offset_right = 24.0
offset_bottom = 84.0
grow_horizontal = 2
text = "Cancel"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="SearchButton" type="TextureButton" parent="ActionButtons"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
offset_left = 107.0
offset_top = 5.0
offset_right = 179.0
offset_bottom = 67.0
texture_hover = ExtResource("10_mqplt")

[node name="SearchLabel" type="Label" parent="ActionButtons/SearchButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 63.0
offset_right = 24.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Search"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="BindButton" type="TextureButton" parent="ActionButtons"]
layout_mode = 2
offset_left = 200.0
offset_top = 5.0
offset_right = 267.0
offset_bottom = 59.0
texture_hover = ExtResource("12_ww1u3")

[node name="BindLabel" type="Label" parent="ActionButtons/BindButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 63.0
offset_right = 24.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Bind"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="ResetButton" type="TextureButton" parent="ActionButtons"]
layout_mode = 2
offset_left = 296.0
offset_right = 365.0
offset_bottom = 64.0
texture_hover = ExtResource("14_yuuwf")

[node name="ResetLabel" type="Label" parent="ActionButtons/ResetButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 68.0
offset_right = 24.0
offset_bottom = 85.0
grow_horizontal = 2
text = "Reset"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="Help" type="TextureButton" parent="ActionButtons"]
layout_mode = 2
offset_left = 229.0
offset_top = 681.0
offset_right = 287.0
offset_bottom = 724.0
texture_hover = ExtResource("13_44085")

[node name="Accept" type="TextureButton" parent="ActionButtons"]
layout_mode = 2
offset_left = 294.0
offset_top = 691.0
offset_right = 391.0
offset_bottom = 765.0
texture_normal = ExtResource("14_pli8f")
texture_hover = ExtResource("13_44085")

[node name="EditButtons" type="Control" parent="."]
anchors_preset = 0
offset_left = 655.0
offset_top = 552.0
offset_right = 1024.0
offset_bottom = 612.0

[node name="Clear" type="TextureButton" parent="EditButtons"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
offset_left = 17.0
offset_top = 1.0
offset_right = 75.0
offset_bottom = 57.0
texture_hover = ExtResource("9_wc13r")

[node name="ClearLabel" type="Label" parent="EditButtons/Clear"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 60.0
offset_right = 24.0
offset_bottom = 77.0
grow_horizontal = 2
text = "Clear
Conflict"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="ClearAll" type="TextureButton" parent="EditButtons"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
offset_left = 106.0
offset_top = 1.0
offset_right = 164.0
offset_bottom = 57.0
texture_hover = ExtResource("10_5kp8f")

[node name="ClearAllLabel" type="Label" parent="EditButtons/ClearAll"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 60.0
offset_right = 24.0
offset_bottom = 77.0
grow_horizontal = 2
text = "Clear
All"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="ClearSelected" type="TextureButton" parent="EditButtons"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
offset_left = 183.0
offset_top = 1.0
offset_right = 265.0
offset_bottom = 57.0
texture_hover = ExtResource("11_3emjx")

[node name="ClearSelectedLabel" type="Label" parent="EditButtons/ClearSelected"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 60.0
offset_right = 24.0
offset_bottom = 77.0
grow_horizontal = 2
text = "Clear
Selected"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="Undo" type="TextureButton" parent="EditButtons"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
offset_left = 277.0
offset_top = 3.0
offset_right = 344.0
offset_bottom = 59.0
texture_hover = ExtResource("12_fagi0")

[node name="UndoLabel" type="Label" parent="EditButtons/Undo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 60.0
offset_right = 24.0
offset_bottom = 77.0
grow_horizontal = 2
text = "Undo"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="AltButtons" type="Control" parent="."]
anchors_preset = 0
offset_top = 721.0
offset_right = 342.0
offset_bottom = 768.0

[node name="AltToggleButton" type="TextureButton" parent="AltButtons"]
layout_mode = 2
offset_left = 28.0
offset_top = 2.0
offset_right = 60.0
offset_bottom = 43.0
toggle_mode = true
texture_pressed = ExtResource("18_6e1hn")
texture_hover = ExtResource("18_6e1hn")

[node name="AltLabel" type="Label" parent="AltButtons/AltToggleButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = -18.0
offset_right = 24.0
offset_bottom = -1.0
grow_horizontal = 2
text = "Alt"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="ShiftToggleButton" type="TextureButton" parent="AltButtons"]
layout_mode = 2
offset_left = 89.0
offset_top = 2.0
offset_right = 121.0
offset_bottom = 43.0
toggle_mode = true
texture_pressed = ExtResource("18_6e1hn")
texture_hover = ExtResource("18_6e1hn")

[node name="ShiftLabel" type="Label" parent="AltButtons/ShiftToggleButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = -18.0
offset_right = 24.0
offset_bottom = -1.0
grow_horizontal = 2
text = "Shift"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="InvertToggleButton" type="TextureButton" parent="AltButtons"]
layout_mode = 2
offset_left = 260.0
offset_top = 2.0
offset_right = 292.0
offset_bottom = 43.0
toggle_mode = true
texture_pressed = ExtResource("18_6e1hn")
texture_hover = ExtResource("18_6e1hn")

[node name="InvertLabel" type="Label" parent="AltButtons/InvertToggleButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = -18.0
offset_right = 24.0
offset_bottom = -1.0
grow_horizontal = 2
text = "Invert"
label_settings = SubResource("LabelSettings_2sjrn")
horizontal_alignment = 1

[node name="ConflictWarning" parent="." instance=ExtResource("5_warn")]
size = Vector2i(600, 528)
theme = null

[node name="ControlsHelp" parent="." instance=ExtResource("6_help")]
visible = false

[connection signal="pressed" from="ActionButtons/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ActionButtons/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="pressed" from="ActionButtons/BindButton" to="." method="_on_bind_button_pressed"]
[connection signal="pressed" from="ActionButtons/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="ActionButtons/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="ActionButtons/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="EditButtons/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="EditButtons/ClearAll" to="." method="_on_clear_all_pressed"]
[connection signal="pressed" from="EditButtons/ClearSelected" to="." method="_on_clear_selected_pressed"]
[connection signal="pressed" from="EditButtons/Undo" to="." method="_on_undo_pressed"]
